Исправлены ошибки plot

--- a/HW_1/microservice_architecture/docker-compose.yml
+++ b/HW_1/microservice_architecture/docker-compose.yml
@@ -34,8 +34,8 @@ services:
   plot:
     build:
       context: ./plot
-    container_name: plot
+    restart: always
     depends_on:
       - metric
     volumes:
-      - ./logs:/app/logs
+      - ./logs/:/usr/src/app/logs/
