--- a/HW_1/microservice_architecture/model/Dockerfile
+++ b/HW_1/microservice_architecture/model/Dockerfile
@@ -5,10 +5,10 @@ FROM python:3.9
 WORKDIR /usr/src/app
 
 # 3. Скопировать содержимое папки src в рабочую директорию
-COPY src/ .
+COPY ./src/ ./
 
 # 4. Скопировать файл с зависимостями
-COPY requirements.txt .
+COPY ./requirements.txt ./
 
 # 5. Установить все необходимые зависимости
 RUN pip install --no-cache-dir -r requirements.txt
